argocd/manifests/hermes-webui/base/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: hermes-webui
  namespace: hermes-webui
  labels:
    app.kubernetes.io/name: hermes-webui
subsets:
  - addresses:
      - ip: 172.20.23.94
    ports:
      - name: http
        protocol: TCP
        port: 8787
